--- a/templates/lab8/lab8.html
+++ b/templates/lab8/lab8.html
@@ -44,6 +44,20 @@
             </div>
         {% endif %}
         
+        <div class="nav-card">
+            <a href="/lab8/public" class="nav-link">
+                <h3>Публичные статьи</h3>
+                <p>Статьи всех пользователей</p>
+            </a>
+        </div>
+
+        <div class="nav-card">
+            <a href="/lab8/search" class="nav-link">
+                <h3>Поиск</h3>
+                <p>Найти статьи по запросу</p>
+            </a>
+        </div>
+        
         {% if username != 'anonymous' %}
         <div class="nav-card">
             <a href="/lab8/logout" class="nav-link">
