--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
         }
     </style>
     {% block style %}{% endblock %}
+    {% block head %}{% endblock %}  
     {% block script %}{% endblock %}
 </head>
 <body>
